Tweak the Scroll-navigation component, defer scripts

--- a/modules/image-gallery.module/module.html
+++ b/modules/image-gallery.module/module.html
@@ -40,7 +40,7 @@
 		</div>
 
 {% require_js %}
-<script>
+<script defer>
 
 	if (!checkHeadForSwiper()) {
 		let script = document.createElement('script');
