--- a/modules/simple-video-player-w-text.module/module.html
+++ b/modules/simple-video-player-w-text.module/module.html
@@ -49,7 +49,7 @@
 
 
 {% require_js %}
-<script>
+<script defer>
   const simple_video_players = document.getElementsByClassName("simple-video-player-container");
   const simple_player_modals = document.getElementsByClassName("simple-video-player-modal");
   const simple_player_iframes = document.getElementsByClassName("simple-video-player-iframe");
