--- a/modules/expanded-services-slider.module/module.html
+++ b/modules/expanded-services-slider.module/module.html
@@ -34,7 +34,7 @@
 </div>
 
 {% require_js %}
-<script>
+<script defer>
   if (!checkHeadForSwiper()) {
     let script = document.createElement('script');
     script.src = 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js';
