--- a/modules/image-gallery-slider.module/module.html
+++ b/modules/image-gallery-slider.module/module.html
@@ -15,7 +15,7 @@
 
 
 {% require_js %}
-<script>
+<script defer>
   if (!checkHeadForSwiper()) {
     let script = document.createElement('script');
     script.src = 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js';
