--- a/modules/swiper-gallery.module/module.html
+++ b/modules/swiper-gallery.module/module.html
@@ -43,7 +43,7 @@
 </div>
 
 {% require_js %}
-<script defer>
+<script>
 
   if (!checkHeadForSwiper()) {
     let script = document.createElement('script');
