--- a/sections/banner.html
+++ b/sections/banner.html
@@ -21,7 +21,7 @@
 				vertical_alignment="MIDDLE",
         path='@hubspot/rich_text',
         html={{ context.title || '<p class="text-5xl lg:text-[80px] font-bold leading-none text-center mb-2 md:mb-0" style="line-height: 1.25;"><span class="font-normal">A&amp;T</span> SISTEM</p>
-<p class="text-5xl font-bold leading-none text-center mb-2 md:mb-0" style="font-size: 30px;"><span style="font-family: Arial, Helvetica, sans-serif;">Tu smo za vas već 15 godina!</span></p>' }}
+<p class="text-5xl font-bold leading-none text-center mb-2 md:mb-0" style="font-size: 30px;"><span">Tu smo za vas već 15 godina!</span></p>' }}
       %}
       {% end_dnd_module %}
 		{% end_dnd_row %}
