--- a/sections/hero-2.html
+++ b/sections/hero-2.html
@@ -8,9 +8,9 @@
 
 {% dnd_section
 	class="
-  relative text-white min-h-[100svh] md:min-h-[700px] lg:min-h-[800px] h-full py-8 px-4 hero-2 pt-[230px]
-  before:size-full before:absolute before:top-0 before:left-0 before:bg-blackGradientHorizontalMobile md:before:bg-blackGradientHorizontal
-  after:size-full after:absolute after:top-0 after:left-0 after:bg-blackGradientVerticalMobile md:after:bg-blackGradientVertical
+  relative text-white min-h-[100svh] sm:min-h-[80svh] md:min-h-[70svh] lg:min-h-[80svh] xl:min-h-[90svh] h-full py-8 px-4 hero-2 pt-[230px]
+  before:size-full before:absolute before:top-0 before:left-0 before:bg-blackGradientHorizontalMobile
+  after:size-full after:absolute after:top-0 after:left-0 after:bg-blackGradientVerticalMobile
   ",
 	background_image={
 		'backgroundPosition': 'MIDDLE_CENTER',
