--- a/sections/image-cards.html
+++ b/sections/image-cards.html
@@ -7,6 +7,7 @@
 -->
 
 {% dnd_section 
+  class="{{ context.custom_classes }}",
   background_color = {{ context.backgroundColor || "#F7F7FD" }}
 %}
   {% dnd_column offset=0, width=12 %}
