--- a/modules/products-grid.module/module.html
+++ b/modules/products-grid.module/module.html
@@ -11,7 +11,7 @@
       </div>
       {% else %}
       <div class="flex items-end">
-        <{{ module.h_tag_choice }} class="text-3xl text-grey mb-0">{{ card.collection }}</{{ module.h_tag_choice }}>
+        <{{ module.h_tag_choice }} class="text-2xl text-grey mb-0">{{ card.collection }}</{{ module.h_tag_choice }}>
       </div>
       {% endif %}
       <div class="bg-purpleGradient w-full h-0.5 {{ 'mb-2' if module.show_image eq true else 'my-2'}}"></div>
@@ -23,7 +23,7 @@
       </ul>
       {% endif %}
       {% if card.description_type == 'paragraph' %}
-      <p class="text-sm leading-5 {{ 'px-2' if module.show_image eq true }}">{{ card.description }}</p>
+      <p class="text-xs leading-5 {{ 'px-2' if module.show_image eq true }}">{{ card.description }}</p>
       {% endif %}
     </div>
     <div class="{{ 'px-2' if module.show_image eq true }}">
