--- a/modules/scroll-navigation.module/module.html
+++ b/modules/scroll-navigation.module/module.html
@@ -60,12 +60,6 @@
 
   const getElementsAbsolutePosition = (element) => {
     const rect = element.getBoundingClientRect();
-    console.log({
-      element,
-      rectTop: rect.top,
-      offset: window.scrollY,
-      return: rect.top + window.scrollY - 80
-    });
     return rect.top + window.scrollY - 80;
   };
 
@@ -77,7 +71,7 @@
           link.classList.add('after:hidden');
         })
         e.target.classList.remove('after:hidden');
-        const element = document.querySelector(e.target.hash);
+        const element = document.querySelector(e.target.hash.replace('#', "."));
         element && window.scrollTo({
           top: getElementsAbsolutePosition(element) - 60,
           behavior: 'smooth'
