--- a/sections/header-1.html
+++ b/sections/header-1.html
@@ -7,7 +7,7 @@
 -->
 
 {% dnd_section
-	class="container-alt text-white {{ context.spacing || 'px-4 pt-[140px] pb-6' }} text-center bg-purpleGradient"
+	class="container-alt text-white p-4 {{ context.custom_section_classes }} bg-purpleGradient"
 %}
 	{% dnd_column offset=0, width=12,	%}
 		{% dnd_row offset=0, width=12 %}
