Edit header 1 description style

--- a/sections/header-1.html
+++ b/sections/header-1.html
@@ -20,7 +20,7 @@
 		{% dnd_row offset=0, width=12 %}
 			{% dnd_module
 				path='@hubspot/rich_text',
-				html={{ context.subtitle || '<p class="font-light text-lg xl:text-3xl mb-2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>' }}
+				html={{ context.subtitle || '<p class="font-light text-base xl:text-xl mb-2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>' }}
 			%}
 			{% end_dnd_module %}
 		{% end_dnd_row %}
