Replace images in page templates

--- a/modules/image-with-post-reversible.module/module.html
+++ b/modules/image-with-post-reversible.module/module.html
@@ -6,7 +6,7 @@
       <p class="text-xl text-center text-white tracking-wider leading-2">Premium</p>
     </div>
     {% endif %}
-    <img src="{{ module.image_field.src }}" loading="{{ module.image_field.loading }}" alt="{{ module.image.alt }}"
+    <img src="{{ module.image_field.src }}" loading="{{ module.image_field.loading }}" alt="{{ module.image_field.alt }}"
       height="{{ module.image.height }}" width="{{ module.image.width }}"
       class="object-{{ module.image_fit }} object-center h-[200px] sm:h-[250px] md:h-[280px] lg:h-[360px] w-full" />
   </div>
