Add missing html widh and height attributes for im ages, edit google fonts link tag.

--- a/modules/image-with-post-reversible.module/module.html
+++ b/modules/image-with-post-reversible.module/module.html
@@ -7,7 +7,7 @@
     </div>
     {% endif %}
     <img src="{{ module.image_field.src }}" loading="{{ module.image_field.loading }}" alt="{{ module.image_field.alt }}"
-      height="{{ module.image.height }}" width="{{ module.image.width }}"
+      height="700" width="360"
       class="object-{{ module.image_fit }} object-center h-[200px] sm:h-[250px] md:h-[280px] lg:h-[360px] w-full" />
   </div>
   <div class="flex w-full lg:w-1/2 items-left m-auto lg:items-center flex-1">
