--- a/modules/menu.module/module.html
+++ b/modules/menu.module/module.html
@@ -117,7 +117,7 @@
 {# Mobile menu #}
 
 <nav class="menu menu--mobile lg:hidden
-  flex pt-[130px]" aria-label="Main menu">
+  flex pt-[130px] pb-5" aria-label="Main menu">
   <ul class="flex list-none flex-col flex-1">
     {{ menu_items() }}
   </ul>
