--- a/sections/image-with-text.html
+++ b/sections/image-with-text.html
@@ -18,7 +18,7 @@
           {
             "src": "https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/pexels-max-vakhtbovych-7587466%201.jpg",
             "alt": "pexels-max-vakhtbovych-7587466 1",
-            "size_type": null,
+            "size_type": "auto",
             "width": 725,
             "height": 500,
             "loading": "eager",
