--- a/modules/image-gallery-slider-CTA.module/module.html
+++ b/modules/image-gallery-slider-CTA.module/module.html
@@ -6,9 +6,11 @@
         <img class="w-full h-[300px] lg:h-[350px] object-center object-cover" src="{{ item.image.src }}"
           width="{{item.image.width}}" height="{{item.image.height}}" loading="{{item.image.loading}}"
           alt="{{ item.image.alt }}">
-        {% if item.show_title && item.show_link %}
-        <p class="font-bold text-sm lg:text-base my-1 text-center">{{ item.image_title }}</p>
-        <a class="button block w-full text-center" href="{{ item.link_field.url.href }}" {{ 'target="_blank"' if
+        {% if item.show_title %}
+        <p class="font-bold mt-1 text-center">{{ item.image_title }}</p>
+        {% endif %}
+        {% if item.show_link %}
+        <a class="button block w-full mt-1 text-center" href="{{ item.link_field.url.href }}" {{ 'target="_blank"' if
           item.link_field.open_in_new_tab }}>
           {{ item.link_label }}
         </a>
