--- a/modules/menu.module/module.html
+++ b/modules/menu.module/module.html
@@ -72,7 +72,7 @@
             </g>
           </svg>
         </span>
-        <span class="menu__link" href="{{ link.url }}">{{ link.label }}</span>
+        <span class="menu__link">{{ link.label }}</span>
         <span class="
           menu__child-toggle-icon
           flex items-center justify-center 
