--- a/modules/image-with-post-reversible.module/module.html
+++ b/modules/image-with-post-reversible.module/module.html
@@ -6,8 +6,8 @@
       <p class="text-xl text-center text-white tracking-wider leading-2">Premium</p>
     </div>
     {% endif %}
-    <img src="{{ module.image_field.src }}" loading="{{ module.image_field.loading }}" alt="{{ module.image_field.alt }}"
-      height="700" width="360"
+    <img src="{{ module.image_field.src }}" loading="{{ module.image_field.loading }}"
+      alt="{{ module.image_field.alt }}" height="700" width="360"
       class="object-{{ module.image_fit }} object-center h-[200px] sm:h-[250px] md:h-[280px] lg:h-[360px] w-full" />
   </div>
   <div class="flex w-full lg:w-1/2 items-left m-auto lg:items-center flex-1">
@@ -26,14 +26,21 @@
         {{ module.title }}
       </{{ module.h_tag_choice }}>
       {% endif %}
-
       <p class="text-xs leading-5 lg:text-p">{{ module.description }}</p>
-      {% if module.link.url.href != '' %}
-      <a href="{{ module.link.url.href }}" {{ 'target="_blank"' if module.link.open_in_new_tab }}
-        class="button w-fit uppercase mt-2">
-        {{ module.link_label }}
-      </a>
-      {% endif %}
+      <div class="flex justify-between gap-1 flex-col sm:flex-row w-full items-start sm:items-center">
+        {% if module.link.url.href != '' %}
+        <a href="{{ module.link.url.href }}" {{ 'target="_blank"' if module.link.open_in_new_tab }}
+          class="button mt-2">
+          {{ module.link_label }}
+        </a>
+        {% endif %}
+        {% if module.show_secondary_link && module.secondary_link.url.href != '' %}
+        <a href="{{ module.secondary_link.url.href }}" {{ 'target="_blank"' if module.secondary_link.open_in_new_tab }}
+          class="button-tertiary sm:mt-2">
+          {{ module.secondary_link_label }}
+        </a>
+        {% endif %}
+      </div>
     </div>
   </div>
 
