--- a/modules/featured-services.module/module.html
+++ b/modules/featured-services.module/module.html
@@ -1,21 +1,18 @@
 <div class="flex flex-col xl:flex-row justify-between gap-5 items-center">
-	<div class="border-l-[10px] border-l-pink pl-5 max-w-[550px] h-min">
-		<h2>{{ module.title }}</h2>
-		<p class="font-light text-sm my-2 leading-normal">{{ module.description }}</p>
+	<div class="border-l-[10px] border-l-pink pl-2 md:pl-4 lg:pl-5 max-w-[550px] h-min w-full">
+		<{{ module.h_tag_choice }}>{{ module.title }}</{{ module.h_tag_choice }}>
+		<p class="font-light mt-2 leading-normal">{{ module.description }}</p>
 		{% if module.link_field.url.href != '' %}
-		<a href="{{ module.link_field.url.href }}" class="flex gap-1 items-center">
+		<a href="{{ module.link_field.url.href }}" class="button mt-2">
 			{{ module.link_label }}
-			<svg width="7" height="10" viewBox="0 0 7 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path d="M0.83905 0.818481L5.00017 4.71926L0.83905 8.62004" stroke="#373738" stroke-width="2" />
-			</svg>
 		</a>
 		{% endif %}
 	</div>
-	<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-2 2xl:grid-cols-3 gap-2 text-white uppercase">
+	<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-3 gap-2 text-white uppercase w-full">
 		{% for card in module.cards %}
-		<div class="w-[260px] h-[180px] rounded-md drop-shadow-sm flex flex-col justify-center items-center"
+		<div class="w-full h-[180px] rounded-md drop-shadow-sm flex flex-col justify-center items-center"
 			style="background-color: {{card.card_color.color}}">
-			<img src="{{card.image_field.src}}" alt="{{card.image_field.alt}}" class="mb-2">
+			<img src="{{card.image_field.src}}" alt="{{card.image_field.alt}}" class="mb-2" width="64" height="64" loading="lazy">
 			<p class="font-semibold">
 				{{ card.card_title }}
 			</p>
