--- a/modules/featured-services.module/module.html
+++ b/modules/featured-services.module/module.html
@@ -1,9 +1,9 @@
 <div class="flex flex-col xl:flex-row justify-between gap-5 items-center">
-	<div class="border-l-[10px] border-l-pink pl-2 md:pl-4 lg:pl-5 max-w-[550px] h-min w-full">
+	<div class="border-l-[10px] border-l-pink pl-2 md:pl-4 lg:pl-5 max-w-[550px] w-full">
 		<{{ module.h_tag_choice }}>{{ module.title }}</{{ module.h_tag_choice }}>
 		<p class="font-light mt-2 leading-normal">{{ module.description }}</p>
 		{% if module.link_field.url.href != '' %}
-		<a href="{{ module.link_field.url.href }}" class="button mt-2">
+		<a href="{{ module.link_field.url.href }}" class="button flex mt-2">
 			{{ module.link_label }}
 		</a>
 		{% endif %}
