--- a/modules/simple-video-player-w-text.module/module.html
+++ b/modules/simple-video-player-w-text.module/module.html
@@ -1,8 +1,8 @@
 <div class="flex flex-col lg:flex-row pb-6 lg:pb-0">
-  <div class="flex flex-col w-full lg:w-1/2 px-4 pt-6 pb-4 lg:pb-9 m-0 justify-start align-start">
-    <{{ module.text.h_tag_choice }} class="mb-2">{{ module.text.title }}</{{ module.text.h_tag_choice }}>
-    <p class="mb-3 paragraph-1">{{ module.text.description }}</p>
-    <a href="{{ module.button_link.url.href }}" {{ 'target="_blank"' if module.button_link.open_in_new_tab }}  class="button w-fit">{{ module.button_label }}</a>
+  <div class="flex flex-col w-full lg:w-1/2 px-4 pt-6 pb-4 lg:pb-9 m-0 justify-center align-start">
+    <{{ module.text.h_tag_choice }} class="text-lg font-bold lg:text-3xl mb-1">{{ module.text.title }}</{{ module.text.h_tag_choice }}>
+    <p class="text-xs leading-5 lg:text-p">{{ module.text.description }}</p>
+    <a href="{{ module.button_link.url.href }}" {{ 'target="_blank"' if module.button_link.open_in_new_tab }}  class="button w-fit mt-2">{{ module.button_label }}</a>
   </div>
   <div class="simple-video-player-container lg:w-1/2 w-full h-auto" data-video-src="{{ module.video.url_field.href }}"
     data-additional-watch-now-button-id="{{ module.video.additional_watch_button_id }}"
