--- a/sections/image-with-text.html
+++ b/sections/image-with-text.html
@@ -16,12 +16,12 @@
         path='../modules/image-with-post-reversible',
         image_field={{ context.image_field || 
           {
-            "src": "https://26015966.fs1.hubspotusercontent-eu1.net/hubfs/26015966/pexels-max-vakhtbovych-7587466%201.jpg",
-            "alt": "pexels-max-vakhtbovych-7587466 1",
+            "src": "https://atsistem.rs/hubfs/Sadrzaj%20Fontane/fpk7-night.jpeg",
+            "alt": "fpk7-night",
             "size_type": "auto",
             "width": 725,
             "height": 500,
-            "loading": "eager",
+            "loading": "lazy",
             "max_width": 725,
             "max_height": 500
           }
