--- a/modules/categories.module/module.html
+++ b/modules/categories.module/module.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col sm:flex-row gap-5 flex-wrap justify-between items-center px-4 md:px-6 text-white text-center font-light text-2xl relative py-[130px]">
+<div class="flex flex-col sm:flex-row gap-5 flex-wrap justify-center lg:justify-between items-center px-4 md:px-6 text-white text-center font-light text-2xl relative py-[25px]">
 	{% if module.variant == 'true' %}
 		<div class="absolute top-0 right-0 bg-blue w-1/5 h-[10px]"></div>
 	  <div class="absolute top-0 right-0 bg-blue w-[10px] max-h-[300px] h-full"></div>
@@ -12,7 +12,7 @@
 			</div>
 			<div class="absolute top-[25px] left-[25px] group-hover:top-[15px] group-hover:left-[15px] w-[250px] h-[250px] z-20 group-hover:scale-110 transition-all">
 				<div class="bg-black/[.2] group-hover:bg-blue/[.85] w-full h-full z-10 flex justify-center items-center absolute">
-					<p class="uppercase">{{ module.card_1.title }}</p>	
+					<p class="uppercase font-normal tracking-wider">{{ module.card_1.title }}</p>	
 				</div>
 				<img src="{{ module.card_1.image_field.src }}" class="object-cover w-full h-full" alt="{{ module.card_1.image_field.alt }}">
 			</div>
@@ -24,7 +24,7 @@
 			</div>
 			<div class="absolute top-[25px] left-[25px] group-hover:top-[15px] group-hover:left-[15px] w-[250px] h-[250px] z-20 group-hover:scale-110 transition-all">
 				<div class="bg-black/[.2] group-hover:bg-pink/[.85] w-full h-full z-10 flex justify-center items-center absolute">
-					<p class="uppercase">{{ module.card_2.title }}</p>	
+					<p class="uppercase font-normal tracking-wider">{{ module.card_2.title }}</p>	
 				</div>
 				<img src="{{ module.card_2.image_field.src }}" class="object-cover w-full h-full" alt="{{ module.card_2.image_field.alt }}">
 			</div>
@@ -36,7 +36,7 @@
 			</div>
 			<div class="absolute top-[25px] left-[25px] group-hover:top-[15px] group-hover:left-[15px] w-[250px] h-[250px] z-20 group-hover:scale-110 transition-all">
 				<div class="bg-black/[.2] group-hover:bg-blue/[.85] w-full h-full z-10 flex justify-center items-center absolute">
-					<p class="uppercase">{{ module.card_3.title }}</p>	
+					<p class="uppercase font-normal tracking-wider">{{ module.card_3.title }}</p>	
 				</div>
 				<img src="{{ module.card_3.image_field.src }}" class="object-cover w-full h-full" alt="{{ module.card_3.image_field.alt }}">
 			</div>
@@ -48,7 +48,7 @@
 			</div>
 			<div class="absolute top-[25px] left-[25px] group-hover:top-[15px] group-hover:left-[15px] w-[250px] h-[250px] z-20 group-hover:scale-110 transition-all">
 				<div class="bg-black/[.2] group-hover:bg-pink/[.85] w-full h-full z-10 flex justify-center items-center absolute">
-					<p class="uppercase">{{ module.card_4.title }}</p>	
+					<p class="uppercase font-normal tracking-wider">{{ module.card_4.title }}</p>	
 				</div>
 				<img src="{{ module.card_4.image_field.src }}" class="object-cover w-full h-full" alt="{{ module.card_4.image_field.alt }}">
 			</div>
