--- a/sections/swiper-gallery.html
+++ b/sections/swiper-gallery.html
@@ -6,11 +6,70 @@
   description: "Swiper Gallery Section"
 -->
 
-{% dnd_section %}
+{% dnd_section class="py-4" %}
 	{% dnd_column offset=0, width=12 %}
+    {% dnd_row %}
+      {% dnd_module
+        path="@hubspot/rich_text",
+        html={{ context.title || '<h3 class="h2 mb-3">Title</h3>' }}
+      %}
+      {% end_dnd_module %}
+    {% end_dnd_row %}
 		{% dnd_row offset=0, width=12 %}
 			{% dnd_module
-        path='../modules/swiper-gallery'
+        path='../modules/swiper-gallery',
+        variant={{ context.variant || false }},
+        show_button={{ context.show_button || false }},
+        button={{ context.button || {
+          "link_field": {
+            "url": {
+            "content_id": null,
+            "type": "EXTERNAL",
+            "href": ""
+            },
+            "open_in_new_tab": false,
+            "no_follow": false
+          },
+          "link_label": "Get a Catalogue"
+        } }},
+        image_group = {{ context.image_group || [
+          {
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/BWT%20POOL%20PRODUCTS.png",
+            "alt": "imageedit_31_2841620365-1",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          },
+          {
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/Bio-Uv%20group.jpg",
+            "alt": "imageedit_31_2841620365-1",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          },
+          {
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/SPECK.jpg",
+            "alt": "imageedit_31_2841620365-1",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          }
+        ] }}
       %}
       {% end_dnd_module %}
 		{% end_dnd_row %}
