Edit Home Page template

--- a/modules/simple-cards.module/module.html
+++ b/modules/simple-cards.module/module.html
@@ -2,7 +2,7 @@
   {% for card in module.cards %}
   <div class="bg-white flex flex-col w-full max-w-[350px] shadow-custom">
     <div class="bg-purpleGradient h-0.5 w-full"></div>
-    <div class="p-3">
+    <div class="p-3 h-full">
       {{ card.content }}
     </div>
   </div>
