--- a/modules/featured-services.module/module.html
+++ b/modules/featured-services.module/module.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col xl:flex-row justify-between gap-5 items-center">
 	<div class="border-l-[10px] border-l-pink pl-2 md:pl-4 lg:pl-5 max-w-[550px] w-full">
-		<{{ module.h_tag_choice }} id="{{ module.heading_id }}">{{ module.title }}</{{ module.h_tag_choice }}>
-		<p class="font-light mt-2 leading-normal">{{ module.description }}</p>
+		<{{ module.h_tag_choice }} id="{{ module.heading_id }}" class="h3 mb-1">{{ module.title }}</{{ module.h_tag_choice }}>
+		<p class="text-xs leading-5 lg:text-p">{{ module.description }}</p>
 		{% if module.link_field.url.href != '' %}
 		<a href="{{ module.link_field.url.href }}" class="button flex mt-2">
 			{{ module.link_label }}
