Edit Contact page & dnd_layout

--- a/modules/contact-form.module/module.html
+++ b/modules/contact-form.module/module.html
@@ -14,7 +14,7 @@
       const urlParams = new URLSearchParams(window.location.search);
       const productParam = urlParams.get('product');
 
-      subjectInput.value = productParam || ''
+      subjectInput.value = productParam || '';
 
     }
   });
